tests/errors/syn_class_var17.java
public class syn_class_var17 {
static int[] name ;
}